--- a/adam/Makefile
+++ b/adam/Makefile
@@ -19,6 +19,7 @@ INC_FLAGS := $(addprefix -I,$(INC_DIRS))
 
 $(BUILD_DIR)/$(TARGET_EXEC): $(OBJS)
 	$(CC) $(LDFLAGS) $(OBJS)
+	$(RM) *_BOOTSTRAP.bin
 #	cp weather.ddp /mnt/z
 
 # c source
