set HIMEM in apple2-hgrtext.cfg remove from makefile. Fix up makefiles to things more clearly

--- a/apple2/Makefile
+++ b/apple2/Makefile
@@ -3,7 +3,7 @@
 # Set the TARGETS and PROGRAM values as required.
 # See makefiles/build.mk for details on directory structure for src files and how to add custom extensions to the build.
 
-TARGETS = apple2enh
+TARGETS = apple2enh apple2
 PROGRAM := weather
 
 SUB_TASKS := clean disk test release
@@ -17,6 +17,17 @@ all:
 		$(MAKE) --no-print-directory -f ../../fujinet-build-tools/makefiles/build.mk CURRENT_TARGET=$$target PROGRAM=$(PROGRAM) $(MAKECMDGOALS); \
 	done
 
+# if disk images were built show them
+	@if [ -d ./dist ]; then \
+		echo "Contents of dist:"; \
+		ls -1 ./dist; \
+	fi
+
+	@echo ""; 
+	@echo "Build Complete"; 
+	@echo ""; 
+
+
 $(SUB_TASKS): _do_all
 $(SUB_TASKS):
 	@:
@@ -29,8 +40,10 @@ help:
 	@echo "Available tasks:"
 	@echo "all       - do all compilation tasks, create app in build directory"
 	@echo "clean     - remove all build artifacts"
-	@echo "disk      - generate platform specific disk versions of application (PO/ATR etc)"
+	@echo "release   - create a release of the executable in the build/ dir"
+	@echo "disk      - generate platform specific disk images in dist/ dir"
+	@echo "deploy    - deploy dist/ images to a local TNFS or other server platform"
 	@echo "test      - run application in emulator for given platform."
 	@echo "            specific platforms may expose additional variables to run with"
 	@echo "            different emulators, see makefiles/custom-<platform>.mk"
-	@echo "release   - create a release of the executable in the dist/ dir"
+	
