--- a/apple2/src/apple2-hgrtext.cfg
+++ b/apple2/src/apple2-hgrtext.cfg
@@ -7,7 +7,8 @@ SYMBOLS {
     __EXEHDR__:    type = import;
     __FILETYPE__:  type = weak, value = $0006; # ProDOS file type
     __STACKSIZE__: type = weak, value = $0500; # Reduce stack size to 1.25K
-    __HIMEM__:     type = weak, value = $9600; # Increased HIMEM
+#    __HIMEM__:     type = weak, value = $9600; # Presumed RAM end
+    __HIMEM__:     type = weak, value = $BF00; # From original Makefile LDFlags
     __LCADDR__:    type = weak, value = $D400; # Behind quit code
     __LCSIZE__:    type = weak, value = $0C00; # Rest of bank two
 }
