--- a/apple2/src/apple2-hgrtext.cfg
+++ b/apple2/src/apple2-hgrtext.cfg
@@ -6,7 +6,8 @@ FEATURES {
 SYMBOLS {
     __EXEHDR__:    type = import;
     __FILETYPE__:  type = weak, value = $0006; # ProDOS file type
-    __STACKSIZE__: type = weak, value = $0500; # Reduce stack size to 1.25K
+#    __STACKSIZE__: type = weak, value = $0500; # Reduce stack size to 1.25K
+    __STACKSIZE__: type = weak, value = $0800; # 2k stack
 #    __HIMEM__:     type = weak, value = $9600; # Presumed RAM end
     __HIMEM__:     type = weak, value = $BF00; # From original Makefile LDFlags
     __LCADDR__:    type = weak, value = $D400; # Behind quit code
@@ -17,7 +18,8 @@ MEMORY {
     ZP:     file = "", define = yes, start = $0080,        size = $001A;
     HEADER: file = %O,               start = %S - $003A,   size = $003A;
     MAIN:   file = %O, define = yes, start = %S,           size = __HIMEM__ - %S;
-    BSS:    file = "",               start = __MAIN_LAST__, size = __HIMEM__ - __STACKSIZE__ - __MAIN_LAST__;
+#    BSS:    file = "",               start = __MAIN_LAST__, size = __HIMEM__ - __STACKSIZE__ - __MAIN_LAST__;
+    BSS:    file = "",               start = __ONCE_RUN__, size = __HIMEM__ - __STACKSIZE__ - __ONCE_RUN__;
     LC:     file = "", define = yes, start = __LCADDR__,   size = __LCSIZE__;
 }
 SEGMENTS {
